when opening a .blend in 4.1 that was created in 3.6, Blender hard crashes when changing the cycles viewport render pass from the viewport shading menu #114336

Closed
opened 2023-10-31 18:10:17 +01:00 by michael campbell · 8 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-27 00:53, hash: ce027579e02f
Worked: (non)

Short description of error
hard crash when changing viewport pass, in a specific scene (link below)

Exact steps for others to reproduce the error

  1. download the free evermotion scene from: https://blendermarket.com/products/15th-anniversary-scene-for-blender
  2. turn on simplify so viewport max texture resolution is 256 and 1 subdivision
  3. set importance map to manual and 2046 max resolution (in world tab under surface)
  4. turn off viewport denoising
  5. start cycles viewport
  6. when it's finished building the scene and the pixels start to show, change the viewport render pass to transmission indirect, then emission, and a few more until it crashes.

When it crashes I have plenty of system ram available (18GB), and VRAM has a GB spare. Persistent data is disabled. So it doesn't appear to be a resource issue.

I tried in 3.63 and it also crashes, even turning on camera culling and setting all object to camera cull, still crashes.

image

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-27 00:53, hash: `ce027579e02f` Worked: (non) **Short description of error** hard crash when changing viewport pass, in a specific scene (link below) **Exact steps for others to reproduce the error** 1. download the free evermotion scene from: https://blendermarket.com/products/15th-anniversary-scene-for-blender 2. turn on simplify so viewport max texture resolution is 256 and 1 subdivision 3. set importance map to manual and 2046 max resolution (in world tab under surface) 4. turn off viewport denoising 5. start cycles viewport 6. when it's finished building the scene and the pixels start to show, change the viewport render pass to transmission indirect, then emission, and a few more until it crashes. When it crashes I have plenty of system ram available (18GB), and VRAM has a GB spare. Persistent data is disabled. So it doesn't appear to be a resource issue. I tried in 3.63 and it also crashes, even turning on camera culling and setting all object to camera cull, still crashes. ![image](/attachments/c1645300-a69c-4e65-92eb-e58f35c68ce6)
michael campbell added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-10-31 18:10:18 +01:00

Incidentally, the next two times I try and start Blender, it takes AGES to start, third time it's back to opening immediately. I notice this is usually the case after a Blender hard crash.

Incidentally, the next two times I try and start Blender, it takes AGES to start, third time it's back to opening immediately. I notice this is usually the case after a Blender hard crash.

OK, I found the cause. The file was designed for Blender 3.6, I first tested in 4.1 as I understand scene's are always forward compatible (usually), I forgot I'd saved it before trying in 3.63, so that must have made the file unusuable in 3.6.

Redownloading the file allows me to avoid the bug in 3.63, so this report is more about a forward compatibility issue it seems.

OK, I found the cause. The file was designed for Blender 3.6, I first tested in 4.1 as I understand scene's are always forward compatible (usually), I forgot I'd saved it before trying in 3.63, so that must have made the file unusuable in 3.6. Redownloading the file allows me to avoid the bug in 3.63, so this report is more about a forward compatibility issue it seems.
michael campbell changed title from Blender hard crashes when changing the cycles viewport render pass from the viewport shading menu to when opening a .blend in 4.1 that was created in 3.6, Blender hard crashes when changing the cycles viewport render pass from the viewport shading menu 2023-10-31 18:46:30 +01:00

I cannot reproduce this with either the latest stable or current development versions of Blender:

Can you try the latest daily build? https://builder.blender.org/download/

Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.

If the problem persists, please upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

Preferably also try to narrow down the problem.
Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly.

I cannot reproduce this with either the latest stable or current development versions of Blender: Can you try the latest daily build? https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue. If the problem persists, please upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer). Preferably also try to narrow down the problem. Normally .blend files can be simplified by removing most objects and disabling settings, until the problem reveals itself more clearly.
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-10-31 21:57:31 +01:00

Hi, sure I'll try again, the crash log is already attached by the way 👍

Hi, sure I'll try again, the crash log is already attached by the way 👍

I skipped one of the steps!
Actually I can replicate the crash:

>	blender.exe!ccl::PathTraceWork::get_display_pass_access_info(ccl::PassMode pass_mode) Line 159	C++
 	blender.exe!ccl::PathTraceWorkCPU::copy_to_display(ccl::PathTraceDisplay * display, ccl::PassMode pass_mode, int num_samples) Line 178	C++
 	blender.exe!ccl::PathTrace::update_display(const ccl::RenderWork & render_work) Line 670	C++
 	blender.exe!ccl::PathTrace::render_pipeline(ccl::RenderWork render_work) Line 229	C++
 	blender.exe!ccl::PathTrace::render(const ccl::RenderWork & render_work) Line 170	C++
 	blender.exe!ccl::Session::run_main_render_loop() Line 202	C++
 	blender.exe!ccl::Session::thread_render() Line 273	C++
 	blender.exe!ccl::Session::thread_run() Line 241	C++
 	[Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 883	C++
 	blender.exe!ccl::thread::run(void * arg) Line 40	C++
 	[External Code]	

I'll try to simplify the file...

I skipped one of the steps! Actually I can replicate the crash: ``` > blender.exe!ccl::PathTraceWork::get_display_pass_access_info(ccl::PassMode pass_mode) Line 159 C++ blender.exe!ccl::PathTraceWorkCPU::copy_to_display(ccl::PathTraceDisplay * display, ccl::PassMode pass_mode, int num_samples) Line 178 C++ blender.exe!ccl::PathTrace::update_display(const ccl::RenderWork & render_work) Line 670 C++ blender.exe!ccl::PathTrace::render_pipeline(ccl::RenderWork render_work) Line 229 C++ blender.exe!ccl::PathTrace::render(const ccl::RenderWork & render_work) Line 170 C++ blender.exe!ccl::Session::run_main_render_loop() Line 202 C++ blender.exe!ccl::Session::thread_render() Line 273 C++ blender.exe!ccl::Session::thread_run() Line 241 C++ [Inline Frame] blender.exe!std::_Func_class<void>::operator()() Line 883 C++ blender.exe!ccl::thread::run(void * arg) Line 40 C++ [External Code] ``` I'll try to simplify the file...

skipping which step resolved the bug please?

skipping which step resolved the bug please?

EDIT: ignore this comment, it was my screen recorder.

~~ I'm not sure if it's related to the bug, but the final render in 4.1 took 37 minutes, whereas in 3.6 the identical file/settings took 23 minutes to render (1000 samples no adaptive sampling)~~

EDIT: ignore this comment, it was my screen recorder. ~~ I'm not sure if it's related to the bug, but the final render in 4.1 took 37 minutes, whereas in 3.6 the identical file/settings took 23 minutes to render (1000 samples no adaptive sampling)~~

Crash solved in 49c3dc9.

Crash solved in 49c3dc9.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-11-02 17:51:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114336
No description provided.