Fix 114336: Cycles crash switching render pass in the viewport